--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,9 @@ h1, h3 {
 
 .product {
   max-width: 700px;
-  margin: 0px 10px 20px 0px; }
+  margin: 0px 10px 20px 0px;
+  margin-left: auto;
+  margin-right: auto; }
   .product img {
     display: block;
     margin-left: auto;
