--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -243,6 +243,8 @@ h1, h3 {
 .product {
     max-width: 700px;
     margin: 0px 10px 20px 0px;
+    margin-left: auto;
+    margin-right: auto;
 
     img {
         display: block;
