--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,28 +189,30 @@ h1, h3 {
   max-height: 100%;
   height: 100%;
   overflow: hidden; }
-  .wrap .row {
-    max-height: 23vh;
-    height: 23vh; }
-    .wrap .row div {
-      height: 100%;
-      width: 100%;
-      position: relative; }
-      .wrap .row div img {
-        max-height: 100%;
-        max-width: 100%;
-        border-radius: 50%; }
+  .wrap .top-row {
+    max-height: 38vh;
+    height: 38vh; }
+  .wrap .bot-row {
+    max-height: 58vh;
+    height: 58vh; }
+  .wrap .row div {
+    height: 100%;
+    width: 100%;
+    position: relative; }
+    .wrap .row div img {
+      max-height: 100%;
+      max-width: 100%;
+      border-radius: 50%; }
 
-.img-scale {
-  transform: scale(1.4); }
+.x-across {
+  position: relative; }
 
-.x-across:before,
 .x-across:after {
   position: absolute;
   content: '';
   background: red;
   display: block;
-  width: 90%;
+  width: 80%;
   height: 10px;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
@@ -225,9 +227,25 @@ h1, h3 {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg); }
 
+.circle {
+  border-radius: 50%; }
+
+.img-smaller {
+  transform: scale(0.9) !important;
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
+
 .landing-area-brand {
   text-decoration: none;
-  color: #0D47A1; }
+  color: #0D47A1;
+  font-size: 36px; }
 
 .text-center {
   text-align: center; }
@@ -374,7 +392,8 @@ h1, h3 {
   outline: none;
   margin-bottom: 5px;
   text-decoration: none;
-  display: inline-block; }
+  display: inline-block;
+  font-family: arial; }
   .buy-btn:hover {
     background-color: #FB8C00;
     cursor: pointer; }
@@ -458,11 +477,7 @@ h1, h3 {
   .nav-list {
     display: block !important; } }
 @media only screen and (max-width: 1030px) {
-  .wrap .row {
-    max-height: 20vh;
-    height: 20vh; }
-    .wrap .row div {
-      max-height: 80%;
-      height: 80%; } }
+  .landing-area-brand {
+    font-size: 28px; } }
 
 /*# sourceMappingURL=style.css.map */
