--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -274,11 +274,18 @@ h1, h3 {
     max-height: 100%;
     height: 100%;
     overflow: hidden;
+    
+    .top-row {
+        max-height: 38vh;
+        height: 38vh;
+    }
+
+    .bot-row {
+        max-height: 58vh;
+        height: 58vh;
+    }
 
     .row {
-        max-height: 23vh;
-        height: 23vh;
-
         div {
             height: 100%;
             width: 100%;
@@ -292,18 +299,15 @@ h1, h3 {
         }
     }
 }
-
-.img-scale {
-    transform: scale(1.4);
+.x-across {
+    position: relative;
 }
-
-.x-across:before,
 .x-across:after {
     position: absolute;
     content: '';
     background: red;
     display: block;
-    width: 90%;
+    width: 80%;
     height: 10px;
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
@@ -320,9 +324,23 @@ h1, h3 {
     transform: rotate(45deg);
 }
 
+.circle {
+    border-radius: 50%;
+}
+
+.img-smaller {
+    transform: scale(.90) !important;
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+}
+
 .landing-area-brand {
     text-decoration: none;
     color: $primary-dark;
+    font-size: 36px;
 }
 
 .text-center {
@@ -520,6 +538,7 @@ h1, h3 {
     margin-bottom: 5px;
     text-decoration: none;
     display: inline-block;
+    font-family: arial;
 
     &:hover {
         background-color: $orange-light;
@@ -654,15 +673,7 @@ h1, h3 {
 }
 
 @media only screen and (max-width: 1030px) {
-    .wrap {
-        .row {
-            max-height: 20vh;
-            height: 20vh;
-
-            div {
-                max-height: 80%;
-                height: 80%;
-            }
-        }
+    .landing-area-brand {
+        font-size: 28px;
     }
 }
