--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -261,6 +261,11 @@ h1, h3 {
     }
 }
 
+// refactor
+.margin-top-offset {
+    margin-top: 70px !important;
+}
+
 .landing-area-container {
     width: 100%;
     height: 100vh;
